<resources>
    <string name="app_name">Millenium</string>
    <string name="feliz_aniversario_galera">Feliz Aniversario, galera</string>
    <string name="de_indira">De: Indira</string>
    <string name="rooney_mara">Rooney_Mara</string>
    <string name="lisbeth_salander">Lisbeth Salander</string>
    <string name="bem_vindo_ao_aplicativo">Bem-vindo ao aplicativo</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="digite_sua_senha">Digite sua senha</string>
</resources>